--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@graphcms/rich-text-html-renderer": "^0.1.0",
+    "@graphcms/rich-text-react-renderer": "^0.5.0",
     "graphql": "^16.4.0",
     "graphql-request": "^4.2.0",
     "html-react-parser": "^1.4.12",
